--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 # Titel und Logo für dieses Theme
-title: Altstadtrundgang Frauenfeldddddddddduibniku
+title: Altstadtrundgang Frauenfeld
 logo: ./logo.jpeg
